[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-genai>=1.75.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "ragas>=0.4.3",
    "uvicorn>=0.46.0",
    "wikipedia>=1.4.0",
]
